# open_parcel_tracker

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
open_parcel_tracker/: Cargo.toml
open_parcel_tracker/src/: cainiao.rs  dhl.rs  four_px.rs  lib.rs
open_parcel_tracker_cli/: Cargo.toml
open_parcel_tracker_web/: Cargo.toml  index.html
open_parcel_tracker_web/assets/: index.css  index.html  index.js
open_parcel_tracker_web/src/: lib.rs  main.rs
